--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
           <h2 class="grey">Coming Soon</h2>
           <p>
             Hello friends! We are currently building our new tutoring website.
-            Add your email address below to stay up-to-date with announcements
-            and our launch proposals.
+            If you are already a student or tutor and have a login please click
+            the button below.
           </p>
           <form action="">
-            <input type="email" placeholder="Email Address" />
-            <input type="submit" value=">" />
+            <a
+              class="go-button"
+              target="blank_"
+              href="https://shiningbrighttutors.tutorwithpearl.com"
+              >GO</a
+            >
           </form>
         </div>
       </div>
