--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <body>
     <div class="container">
       <div class="all-container">
-        <img id="logo" src="images/logo.png" alt="" />
+        <a href="Shining Bright Template/Home.html"
+          ><img id="logo" src="images/logo.png" alt=""
+        /></a>
+
         <div id="shoe-img"></div>
         <div class="text-container">
           <h2 class="blue">We're</h2>
