--- a/Shining Bright Template/Services.html
+++ b/Shining Bright Template/Services.html
@@ -272,7 +272,7 @@
               want. Just choose the service and enjoy.
             </p>
             <a
-              href="https://nicepage.review"
+              href="Contact.html"
               class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
               >contact us</a
             >
