--- a/Shining Bright Template/Home.html
+++ b/Shining Bright Template/Home.html
@@ -32,6 +32,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <script type="application/ld+json">
       {
@@ -193,12 +197,12 @@
         class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xs u-sheet-1"
       >
         <h1 class="u-custom-font u-font-playfair-display u-text u-text-1">
-          Make learning fun!&nbsp;
+          Learning for your children from the comfort of your own home!
         </h1>
         <p class="u-text u-text-2">
-          Nunc consequat interdum varius sit amet. Urna cursus eget nunc
-          scelerisque. Et tortor at risus viverra adipiscing at. Facilisi cras
-          fermentum odio eu feugiat pretium.
+          Personalized Online Tutoring to Reach Your Goals. Shining Bright
+          Tutors offers a variety of services designed to meet your student
+          where they are at.
         </p>
         <div
           class="u-expanded-width u-palette-4-base u-shape u-shape-rectangle u-shape-1"
@@ -223,27 +227,39 @@
                     class="u-align-left u-container-style u-layout-cell u-size-60 u-layout-cell-2"
                   >
                     <div class="u-container-layout u-container-layout-2">
-                      <h4 class="u-text u-text-3">Learning Skills</h4>
-                      <ol class="u-text u-text-4">
-                        <li style="">Fusce orci nibh</li>
-                        <li style="">Pharetra sed est at</li>
-                        <li style="">Egestas vestibulum</li>
-                        <li style="">Maecenas eleifend</li>
-                        <li style="">Nulla euismod neque<br /></li>
-                      </ol>
-                      <p class="u-text u-text-5">
-                        Images from
+                      <h4 class="u-text u-text-3">
+                        Services to Meet Your Needs
+                      </h4>
+                      <ul class="u-text u-text-4">
+                        <h4 class="new-text">CURRICULUM TUTORING</h4>
+                        <li style="">Elementary Core Subjects</li>
+                        <li style="">Middle School Core Subjects</li>
+                        <li style="">English I-IV</li>
+                        <li style="">Algebra 1 & 2</li>
+                        <li style="">Geometry</li>
+                        <li style="">​Homework Help</li>
+                      </ul>
+                      <ul class="u-text u-text-4">
+                        <h4 class="new-text">Test Prep</h4>
+                        <li style="">3 - 8 State Assessments</li>
+                        <li style="">Algebra 1 EOC</li>
+                        <li style="">English 1 & 2 EOC</li>
+                        <li style="">NWEA Assessments</li>
+                        <li style="">ISEE & SSAT Assessments</li>
+                        <li style="">​ACT & SAT</li>
+                      </ul>
+                      <div class="socials">
+                        <div>Find Us on Social Media</div>
                         <a
-                          href="https://www.freepik.com/photos/background"
-                          class="u-active-none u-border-1 u-border-grey-75 u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-1"
-                          >Freepik</a
+                          href="https://www.facebook.com/shiningbrighttutors"
+                          class="fa fa-facebook"
+                        ></a>
+                        <a
+                          href="Contact.html"
+                          class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-active-palette-3-base u-text-black u-text-hover-white u-btn-2"
+                          >contact us</a
                         >
-                      </p>
-                      <a
-                        href="https://nicepage.best"
-                        class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-active-palette-3-base u-text-black u-text-hover-white u-btn-2"
-                        >view more</a
-                      >
+                      </div>
                     </div>
                   </div>
                 </div>
