--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
               href="https://shiningbrighttutors.tutorwithpearl.com"
               >GO</a
             >
+            <a class="go-button-1" href="Shining Bright Template/Contact.html"
+              >Contact Us</a
+            >
           </form>
         </div>
       </div>
