--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -191,7 +191,7 @@
         <h1 class="u-text u-text-default u-text-1">Contact Us</h1>
         <div class="u-form u-form-1">
           <form
-            action="#"
+            action="Contact-form.php"
             method="POST"
             class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
             style="padding: 10px"
