--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -191,11 +191,11 @@
         <h1 class="u-text u-text-default u-text-1">Contact Us</h1>
         <div class="u-form u-form-1">
           <form
-            action="Contact-form.php"
+            action="scripts/form-6701.php"
             method="POST"
             class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
             style="padding: 10px"
-            source="email"
+            source="customphp"
             name="form"
           >
             <div class="u-form-group u-form-name u-label-none">
@@ -266,5 +266,20 @@
         </p>
       </div>
     </footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a
+        class="u-link"
+        href="https://nicepage.com/website-templates"
+        target="_blank"
+      >
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span> </a
+      >.
+    </section>
   </body>
 </html>
