--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -9,7 +9,11 @@
     <title>Contact</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="Contact.css" media="screen" />
-    <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <link
+      href="images/favicon copy.png"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
     <script
       class="u-script"
       type="text/javascript"
