--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -197,7 +197,7 @@
         <div class="u-form u-form-1">
           <form
             action="scripts/form-6701.php"
-            method="POST"
+            method="GET"
             class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
             style="padding: 10px"
             source="customphp"
