--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -196,11 +196,10 @@
         <h1 class="u-text u-text-default u-text-1">Contact Us</h1>
         <div class="u-form u-form-1">
           <form
-            action="scripts/form-6701.php"
-            method="GET"
+            action="https://formsubmit.co/frank@kynard2.com"
+            method="POST"
             class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
             style="padding: 10px"
-            source="customphp"
             name="form"
           >
             <div class="u-form-group u-form-name u-label-none">
@@ -243,6 +242,12 @@
                 class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
                 >Submit</a
               >
+              <button
+                class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
+                type="submit"
+              >
+                Send
+              </button>
               <input
                 type="submit"
                 value="submit"
