--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -259,7 +259,11 @@
             <div class="u-form-send-error u-form-send-message">
               Unable to send your message. Please fix errors then try again.
             </div>
-            <input type="hidden" value="" name="recaptchaResponse" />
+            <input
+              type="hidden"
+              value="https://formsubmit.co/fkynard2@gmail.com"
+              name="recaptchaResponse"
+            />
           </form>
         </div>
       </div>
