--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -236,11 +236,6 @@
               ></textarea>
             </div>
             <div class="u-align-center u-form-group u-form-submit">
-              <a
-                href="#"
-                class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
-                >Submit</a
-              >
               <button
                 class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
                 type="submit"
@@ -262,7 +257,7 @@
             <input
               type="hidden"
               value="https://formsubmit.co/fkynard2@gmail.com"
-              name="recaptchaResponse"
+              name="_next"
             />
           </form>
         </div>
