--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -257,7 +257,7 @@
             <input
               type="hidden"
               value="https://formsubmit.co/fkynard2@gmail.com"
-              name="_next"
+              name="recaptchaResponse"
             />
           </form>
         </div>
