--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -236,6 +236,11 @@
               ></textarea>
             </div>
             <div class="u-align-center u-form-group u-form-submit">
+              <a
+                href="#"
+                class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
+                >Submit</a
+              >
               <button
                 class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
                 type="submit"
