--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -200,6 +200,7 @@
             method="POST"
             class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
             style="padding: 10px"
+            source="customphp"
           >
             <div class="u-form-group u-form-name u-label-none">
               <label for="name-3b9a" class="u-label">Name</label>
@@ -249,7 +250,7 @@
               </button>
               <input
                 type="submit"
-                value="submit"
+                value="https://formsubmit.co/fkynard2@gmail.com"
                 class="u-form-control-hidden"
               />
             </div>
