--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -196,7 +196,7 @@
         <h1 class="u-text u-text-default u-text-1">Contact Us</h1>
         <div class="u-form u-form-1">
           <form
-            action="https://formsubmit.co/frank@kynard2.com"
+            action="https://formsubmit.co/fkynard2@gmail.com"
             method="POST"
             class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
             style="padding: 10px"
@@ -250,7 +250,7 @@
               </button>
               <input
                 type="submit"
-                value="https://formsubmit.co/fkynard2@gmail.com"
+                value="submit"
                 class="u-form-control-hidden"
               />
             </div>
