--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -257,7 +257,7 @@
             <input
               type="hidden"
               name="_next"
-              value="https://www.shiningbrighttutors.com/thanks.html"
+              value="https://www.shiningbrighttutors.com/index.html"
             />
           </form>
         </div>
