--- a/thanks.html
+++ b/thanks.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <title>Thank you</title>
   </head>
   <body>
-    Thank you
+    <div class="container">
+      <div class="all-container">
+        <a href="Shining Bright Template/Home.html"
+          ><img id="logo" src="images/logo.png" alt=""
+        /></a>
+
+        <div id="shoe-img"></div>
+        <div class="text-container">
+          <h2 class="blue">Thank You</h2>
+          <h2 class="grey">For Sending us your email</h2>
+          <p>
+            5900 Balcones Drive STE 6211
+            <br />
+            Austin Texas 78731
+            <br />
+            (512) 607-5973
+          </p>
+          <form action="">
+            <a class="go-button" href="index.html">Home</a>
+            <a class="go-button-1" href="Shining Bright Template/Contact.html"
+              >Contact Us</a
+            >
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="desktop-image"></div>
   </body>
 </html>
