--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -32,6 +32,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <script type="application/ld+json">
       {
@@ -54,7 +58,7 @@
           data-image-width="256"
           data-image-height="191"
         >
-          <img src="images/logosmall.png" class="u-logo-image u-logo-image-1" />
+          <img src="images/logo.png" class="u-logo-image u-logo-image-1" />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div
@@ -196,7 +200,7 @@
         <h1 class="u-text u-text-default u-text-1">Contact Us</h1>
         <div class="u-form u-form-1">
           <form
-            action="https://formsubmit.co/fkynard2@gmail.com"
+            action="https://formsubmit.co/shiningbrighttutors@gmail.com"
             method="POST"
             class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
             style="padding: 10px"
@@ -236,7 +240,17 @@
               ></textarea>
             </div>
             <div class="u-align-center u-form-group u-form-submit">
-              <button class="" type="submit">Send</button>
+              <a
+                href="../index.html"
+                class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
+                >Home</a
+              >
+              <button
+                class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
+                type="submit"
+              >
+                Send
+              </button>
               <input
                 type="submit"
                 value="submit"
@@ -251,7 +265,7 @@
             </div>
             <input
               type="hidden"
-              value="https://formsubmit.co/fkynard2@gmail.com"
+              value="https://formsubmit.co/shiningbrighttutors@gmail.com"
               name="recaptchaResponse"
             />
             <input
@@ -269,25 +283,12 @@
       id="sec-1144"
     >
       <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">
-          Sample text. Click to select the Text Element.
-        </p>
+        <p class="u-small-text u-text u-text-variant u-text-1">social media</p>
+        <a
+          href="https://www.facebook.com/shiningbrighttutors"
+          class="fa fa-facebook"
+        ></a>
       </div>
     </footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a
-        class="u-link"
-        href="https://nicepage.com/website-templates"
-        target="_blank"
-      >
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span> </a
-      >.
-    </section>
   </body>
 </html>
