--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -285,6 +285,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">social media</p>
         <a
+          target="_blank"
           href="https://www.facebook.com/shiningbrighttutors"
           class="fa fa-facebook"
         ></a>
