--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -53,7 +53,7 @@
     <header class="u-clearfix u-header u-header" id="sec-9623">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a
-          href="https://nicepage.com"
+          href="../index.html"
           class="u-image u-logo u-image-1"
           data-image-width="256"
           data-image-height="191"
