--- a/Shining Bright Template/About.html
+++ b/Shining Bright Template/About.html
@@ -213,12 +213,52 @@
                 <div class="u-container-layout u-container-layout-3">
                   <h2 class="u-text u-text-default u-text-1">About Us</h2>
                   <p class="u-text u-text-2">
-                    Paragraph. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Curabitur id suscipit ex. Suspendisse
-                    rhoncus laoreet purus quis elementum. Phasellus sed
-                    efficitur dolor, et ultricies sapien. Quisque fringilla sit
-                    amet dolor commodo efficitur. Aliquam et sem odio. In
-                    ullamcorper nisi nunc, et molestie ipsum iaculis sit amet.
+                    Shining Bright Tutors LLC is a tutoring company that places
+                    importance on student achievement first. Our goal is to
+                    CREATE BRIGHT FUTURES! We aim to serve students online in
+                    grades K-12 across the United States. We specialize in one
+                    on one tutoring covering all core subjects and including
+                    Test Prep for state and district assessments as well as the
+                    college entry exams (SAT and ACT).
+                  </p>
+
+                  <p>Our mission:</p>
+                  <br />
+                  <p>Our Vision:</p>
+                  <br />
+                  <br />
+                  <br />
+                  <br />
+                  <h5>Meet our Founder</h5>
+                  <br />
+                  <p>
+                    Karmen Kynard, originally from Toledo, Ohio started tutoring
+                    in January 2017. She started simply because she wanted to
+                    provide a service to students. She is a certified educator
+                    for grades K-12 and has served students in both general
+                    education and special education settings. She graduated with
+                    her Master’s in Education from Bowling Green State
+                    University in Ohio with a focus on Special Education. Her
+                    specialty is working with struggling learners in all core
+                    subjects. Continuing her education gained her another
+                    Master's in Education for Educational Leadership.
+                  </p>
+                  <br />
+                  <p>
+                    Over the course of her career she has had the opportunity to
+                    (change font?)work at schools located in 4 different states
+                    (Ohio, Wisconsin, Louisiana, and Texas) and 6 different
+                    cities (Toledo, Cleveland, Milwaukee, Baton Rouge,
+                    Lafayette, Austin). Due to teaching in multiple states, she
+                    has learned flexibility and how to adapt to differing state
+                    standards and curriculums.
+                  </p>
+                  <br />
+                  <p>
+                    While she enjoyed tutoring, she realized that she could have
+                    a much larger impact if she started accepting and working
+                    with more tutors to support students and that when Shining
+                    Bright Tutors was born.
                   </p>
                 </div>
               </div>
