--- a/Shining Bright Template/About.html
+++ b/Shining Bright Template/About.html
@@ -191,16 +191,8 @@
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div
-                class="u-container-style u-image u-layout-cell u-left-cell u-size-17 u-image-1"
-                src=""
-                data-image-width="256"
-                data-image-height="256"
-              >
-                <div class="u-container-layout u-container-layout-1"></div>
-              </div>
-              <div
                 class="u-container-style u-image u-layout-cell u-right-cell u-size-12 u-image-2"
-                src=""
+                src="images/logo.png"
                 data-image-width="256"
                 data-image-height="256"
               >
