--- a/Shining Bright Template/Services.html
+++ b/Shining Bright Template/Services.html
@@ -190,6 +190,7 @@
         <h2 class="u-align-left u-text u-text-1">Our Services</h2>
         <div
           class="u-container-style u-expanded-width-md u-group u-palette-5-light-2 u-shape-rectangle u-group-1"
+          style="background-color: white"
         >
           <div
             class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-1"
@@ -212,16 +213,19 @@
             <a
               href=""
               class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
+              style="padding-left: 10px; padding-right: 14px"
               >ready to book</a
             >
           </div>
         </div>
         <div
           class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-list u-list-1"
+          style="margin-top: 60px; margin-right: auto; width: 100%"
         >
           <div class="u-repeater u-repeater-1">
             <div
               class="u-align-left u-container-style u-list-item u-palette-5-light-2 u-repeater-item u-list-item-1"
+              style="background-color: white"
             >
               <div
                 class="u-container-layout u-similar-container u-valign-top u-container-layout-2"
@@ -244,6 +248,7 @@
             </div>
             <div
               class="u-align-left u-container-style u-list-item u-palette-5-light-2 u-repeater-item u-video-cover"
+              style="background-color: white"
             >
               <div
                 class="u-container-layout u-similar-container u-valign-top u-container-layout-3"
@@ -267,6 +272,7 @@
             </div>
             <div
               class="u-align-left u-container-style u-list-item u-palette-5-light-2 u-repeater-item u-video-cover"
+              style="background-color: white"
             >
               <div
                 class="u-container-layout u-similar-container u-valign-top u-container-layout-4"
@@ -288,6 +294,7 @@
             </div>
             <div
               class="u-align-left u-container-style u-list-item u-palette-5-light-2 u-repeater-item u-video-cover"
+              style="background-color: white"
             >
               <div
                 class="u-container-layout u-similar-container u-valign-top u-container-layout-5"
