--- a/Shining Bright Template/Services.html
+++ b/Shining Bright Template/Services.html
@@ -205,17 +205,27 @@
               shiningbrighttutors@gmail.com to schedule a call so that we may
               customize a package for you!
             </p>
-            <a
-              href="Contact.html"
-              class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
-              >contact us</a
-            >
-            <a
-              href=""
-              class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
-              style="padding-left: 10px; padding-right: 14px"
-              >ready to book</a
-            >
+            <div class="package-buttons">
+              <a
+                href="Contact.html"
+                class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
+                >contact us</a
+              >
+              <a
+                href="https://shiningbrighttutors.tutorwithpearl.com/storefront"
+                class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
+                style="padding-left: 10px; padding-right: 14px"
+                target="_blank"
+                >ready to book</a
+              >
+              <a
+                href="https://forms.gle/eFFdhjrrdggAGPEu6"
+                class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
+                style="padding-left: 5px; padding-right: 8px"
+                target="_blank"
+                >schedule a call</a
+              >
+            </div>
           </div>
         </div>
         <div
