--- a/Shining Bright Template/Services.html
+++ b/Shining Bright Template/Services.html
@@ -209,21 +209,30 @@
               <a
                 href="Contact.html"
                 class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
+                style="border-radius: 10px"
                 >contact us</a
               >
               <a
                 href="https://shiningbrighttutors.tutorwithpearl.com/storefront"
                 class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
-                style="padding-left: 10px; padding-right: 14px"
+                style="
+                  padding-left: 10px;
+                  padding-right: 14px;
+                  border-radius: 10px;
+                "
                 target="_blank"
                 >ready to book</a
               >
               <a
                 href="https://forms.gle/eFFdhjrrdggAGPEu6"
                 class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
-                style="padding-left: 5px; padding-right: 8px"
+                style="
+                  padding-left: 5px;
+                  padding-right: 8px;
+                  border-radius: 10px;
+                "
                 target="_blank"
-                >schedule a call</a
+                >request call</a
               >
             </div>
           </div>
