--- a/Shining Bright Template/About.html
+++ b/Shining Bright Template/About.html
@@ -183,6 +183,7 @@
         </nav>
       </div>
     </header>
+    <img src="images/top picture.png" alt="" />
     <section class="u-clearfix u-grey-5 u-section-1" id="sec-bcab">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div
@@ -206,8 +207,10 @@
                     college entry exams (SAT and ACT).
                   </p>
 
-                  <h5>Meet our Founder</h5>
+                  <h5>Meet Our Founder:</h5>
+                  <img src="images/karmens photo.png" alt="" />
                   <br />
+
                   <p>
                     Karmen Kynard, originally from Toledo, Ohio started tutoring
                     in January 2017. She started simply because she wanted to
