--- a/Shining Bright Template/About.html
+++ b/Shining Bright Template/About.html
@@ -208,7 +208,11 @@
                   </p>
 
                   <h5>Meet Our Founder:</h5>
-                  <img src="images/karmens photo.png" alt="" />
+                  <img
+                    src="images/karmens photo2.jpg"
+                    alt=""
+                    style="height: 300px"
+                  />
                   <br />
 
                   <p>
