--- a/Shining Bright Template/Services.html
+++ b/Shining Bright Template/Services.html
@@ -236,7 +236,13 @@
               >
             </div>
           </div>
+          <img
+            src="images/side logo for services.jpg"
+            alt=""
+            style="margin-left: 40px; border-radius: 10px"
+          />
         </div>
+
         <div
           class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-list u-list-1"
           style="margin-top: 60px; margin-right: auto; width: 100%"
