--- a/Shining Bright Template/Services.html
+++ b/Shining Bright Template/Services.html
@@ -183,6 +183,7 @@
         </nav>
       </div>
     </header>
+
     <section class="u-align-center u-clearfix u-section-1" id="carousel_7d14">
       <div
         class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1"
@@ -200,37 +201,26 @@
             /></span>
             <h3 class="u-text u-text-default u-text-2">Packages</h3>
             <p class="u-text u-text-default u-text-3">
-              We have a variety of packages beginning in 30, 60 and 90-minute
-              increments to meet your needs. Don't see a package? Email us at
-              shiningbrighttutors@gmail.com to schedule a call so that we may
-              customize a package for you!
+              We have a variety of online tutoring packages beginning in 30, 60
+              and 90-minute increments to meet your needs. Don't see a package?
+              Email us at shiningbrighttutors@gmail.com to schedule a call so
+              that we may customize a package for you!
             </p>
             <div class="package-buttons">
               <a
                 href="Contact.html"
                 class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
-                style="border-radius: 10px"
                 >contact us</a
               >
               <a
                 href="https://shiningbrighttutors.tutorwithpearl.com/storefront"
-                class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
-                style="
-                  padding-left: 10px;
-                  padding-right: 14px;
-                  border-radius: 10px;
-                "
+                class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1 u-btn-now"
                 target="_blank"
-                >ready to book</a
+                >Book now</a
               >
               <a
                 href="https://forms.gle/eFFdhjrrdggAGPEu6"
-                class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1"
-                style="
-                  padding-left: 5px;
-                  padding-right: 8px;
-                  border-radius: 10px;
-                "
+                class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1 u-btn-req"
                 target="_blank"
                 >request call</a
               >
@@ -240,6 +230,7 @@
             src="images/side logo for services.jpg"
             alt=""
             style="margin-left: 40px; border-radius: 10px"
+            class="side-logo-laptop"
           />
         </div>
 
