--- a/Shining Bright Template/About.html
+++ b/Shining Bright Template/About.html
@@ -183,68 +183,70 @@
         </nav>
       </div>
     </header>
-    <img src="images/top picture.png" alt="" />
+    <div class="top-pic">
+      <img src="images/top picture.png" alt="" class="top-picture" />
+    </div>
     <section class="u-clearfix u-grey-5 u-section-1" id="sec-bcab">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div
           class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1"
         >
           <div class="u-gutter-0 u-layout">
-            <div class="u-layout-row">
-              <div
-                class="u-align-left u-container-style u-layout-cell u-right-cell u-size-31 u-layout-cell-3"
-                src=""
-              >
-                <div class="u-container-layout u-container-layout-3">
-                  <h2 class="u-text u-text-default u-text-1">About Us</h2>
-                  <p class="u-text u-text-2">
-                    Shining Bright Tutors LLC is a tutoring company that places
-                    importance on student achievement first. Our goal is to
-                    CREATE BRIGHT FUTURES! We aim to serve students online in
-                    grades K-12 across the United States. We specialize in one
-                    on one tutoring covering all core subjects and including
-                    Test Prep for state and district assessments as well as the
-                    college entry exams (SAT and ACT).
-                  </p>
+            <div
+              class="u-align-left u-container-style u-layout-cell u-right-cell u-size-31 u-layout-cell-3"
+              src=""
+            >
+              <div class="u-container-layout u-container-layout-3">
+                <h2 class="u-text u-text-default u-text-1">About Us</h2>
+                <p class="u-text u-text-2">
+                  Shining Bright Tutors LLC is a tutoring company that places
+                  importance on student achievement first. Our goal is to CREATE
+                  BRIGHT FUTURES! We aim to serve students online in grades K-12
+                  across the United States. We specialize in one on one tutoring
+                  covering all core subjects and including Test Prep for state
+                  and district assessments as well as the college entry exams
+                  (SAT and ACT).
+                </p>
 
-                  <h5>Meet Our Founder:</h5>
+                <h5>Meet Our Founder:</h5>
+                <div class="top-pic">
                   <img
                     src="images/karmens photo2.jpg"
                     alt=""
                     style="height: 300px"
                   />
-                  <br />
-
-                  <p>
-                    Karmen Kynard, originally from Toledo, Ohio started tutoring
-                    in January 2017. She started simply because she wanted to
-                    provide a service to students. She is a certified educator
-                    for grades K-12 and has served students in both general
-                    education and special education settings. She graduated with
-                    her Master’s in Education from Bowling Green State
-                    University in Ohio with a focus on Special Education. Her
-                    specialty is working with struggling learners in all core
-                    subjects. Continuing her education gained her another
-                    Master's in Education for Educational Leadership.
-                  </p>
-                  <br />
-                  <p>
-                    Over the course of her career she has had the opportunity to
-                    (change font?)work at schools located in 4 different states
-                    (Ohio, Wisconsin, Louisiana, and Texas) and 6 different
-                    cities (Toledo, Cleveland, Milwaukee, Baton Rouge,
-                    Lafayette, Austin). Due to teaching in multiple states, she
-                    has learned flexibility and how to adapt to differing state
-                    standards and curriculums.
-                  </p>
-                  <br />
-                  <p>
-                    While she enjoyed tutoring, she realized that she could have
-                    a much larger impact if she started accepting and working
-                    with more tutors to support students and that when Shining
-                    Bright Tutors was born.
-                  </p>
                 </div>
+                <br />
+
+                <p>
+                  Karmen Kynard, originally from Toledo, Ohio started tutoring
+                  in January 2017. She started simply because she wanted to
+                  provide a service to students. She is a certified educator for
+                  grades K-12 and has served students in both general education
+                  and special education settings. She graduated with her
+                  Master’s in Education from Bowling Green State University in
+                  Ohio with a focus on Special Education. Her specialty is
+                  working with struggling learners in all core subjects.
+                  Continuing her education gained her another Master's in
+                  Education for Educational Leadership.
+                </p>
+                <br />
+                <p>
+                  Over the course of her career she has had the opportunity to
+                  (change font?)work at schools located in 4 different states
+                  (Ohio, Wisconsin, Louisiana, and Texas) and 6 different cities
+                  (Toledo, Cleveland, Milwaukee, Baton Rouge, Lafayette,
+                  Austin). Due to teaching in multiple states, she has learned
+                  flexibility and how to adapt to differing state standards and
+                  curriculums.
+                </p>
+                <br />
+                <p>
+                  While she enjoyed tutoring, she realized that she could have a
+                  much larger impact if she started accepting and working with
+                  more tutors to support students and that when Shining Bright
+                  Tutors was born.
+                </p>
               </div>
             </div>
           </div>
