--- a/Shining Bright Template/FAQs.html
+++ b/Shining Bright Template/FAQs.html
@@ -188,7 +188,9 @@
       id="sec-fc43"
     >
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h2 class="u-text u-text-default u-text-1">Facts &amp; Questions</h2>
+        <h2 class="u-text u-text-default u-text-1">
+          Frequently Asked Questions:
+        </h2>
         <p class="u-text u-text-2">
           Sample text. Click to select the text box. Click again or double click
           to start editing the text.
