--- a/Shining Bright Template/About.html
+++ b/Shining Bright Template/About.html
@@ -184,7 +184,7 @@
       </div>
     </header>
     <div class="top-pic">
-      <img src="images/top picture.png" alt="" class="top-picture" />
+      <img src="images/new vi.jpg" alt="" class="top-picture" />
     </div>
     <section class="u-clearfix u-grey-5 u-section-1" id="sec-bcab">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
