--- a/Shining Bright Template/Contact.html
+++ b/Shining Bright Template/Contact.html
@@ -50,7 +50,7 @@
     <meta property="og:type" content="website" />
   </head>
   <body class="u-body u-xl-mode">
-    <header class="u-clearfix u-header u-header" id="sec-9623">
+    <!-- <header class="u-clearfix u-header u-header" id="sec-9623">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a
           href="../index.html"
@@ -191,14 +191,17 @@
           </div>
         </nav>
       </div>
-    </header>
+    </header> -->
     <section
       class="u-align-center u-clearfix u-grey-5 u-section-1"
       id="sec-6701"
     >
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-default u-text-1">Contact Us</h1>
-        <div class="u-form u-form-1">
+      <a href="Home.html"
+        ><img src="images/logo side badge.png" alt="" style="width: 28%"
+      /></a>
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1 contact-align">
+        <div class="u-form u-form-1 u-1-box">
+          <h1 class="u-text u-text-default u-text-1">Drop us a line!</h1>
           <form
             action="https://formsubmit.co/shiningbrighttutors@gmail.com"
             method="POST"
@@ -231,8 +234,8 @@
               <label for="message-3b9a" class="u-label">Message</label>
               <textarea
                 placeholder="Enter your message"
-                rows="4"
-                cols="50"
+                rows="2"
+                cols="25"
                 id="message-3b9a"
                 name="message"
                 class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-3"
@@ -275,6 +278,28 @@
             />
           </form>
         </div>
+        <div class="just-margin">
+          <p class="address-box">
+            <span class="Shining-bright">Shining Bright Tutors</span>
+            <br />
+            Send Mail to: 5900
+            <br />
+            Balcones Drive Suite 6211
+            <br />
+            Austin, TX 78731
+            <br />
+            <br />
+            <span class="call-us">Call Us at (512) 607-5973</span>
+          </p>
+        </div>
+      </div>
+      <div class="u-btn-req-center">
+        <a
+          href="https://forms.gle/eFFdhjrrdggAGPEu6"
+          class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1 u-btn-rectangle u-border-2"
+          target="_blank"
+          >request call</a
+        >
       </div>
     </section>
 
