--- a/Shining Bright Template/Home.html
+++ b/Shining Bright Template/Home.html
@@ -226,10 +226,9 @@
                   <div
                     class="u-align-left u-container-style u-layout-cell u-size-60 u-layout-cell-2"
                   >
-                    <div class="u-container-layout u-container-layout-2">
-                      <h4 class="u-text u-text-3">
-                        Services to Meet Your Needs
-                      </h4>
+                    <div
+                      class="u-container-layout u-container-layout-2 u-expanded-width"
+                    >
                       <ul class="u-text u-text-4">
                         <h4 class="new-text">CURRICULUM TUTORING</h4>
                         <li style="">Elementary Core Subjects</li>
@@ -248,20 +247,19 @@
                         <li style="">ISEE & SSAT Assessments</li>
                         <li style="">​ACT & SAT</li>
                       </ul>
-                      <div class="socials">
-                        <div>Find Us on Social Media</div>
-                        <a
-                          href="https://www.facebook.com/shiningbrighttutors"
-                          class="fa fa-facebook"
-                        ></a>
-                        <a
-                          href="Contact.html"
-                          class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-active-palette-3-base u-text-black u-text-hover-white u-btn-2"
-                          >contact us</a
-                        >
-                      </div>
                     </div>
                   </div>
+                  <div class="socials"></div>
+                  <div>Find Us on Social Media</div>
+                  <a
+                    href="https://www.facebook.com/shiningbrighttutors"
+                    class="fa fa-facebook"
+                  ></a>
+                  <a
+                    href="Contact.html"
+                    class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-active-palette-3-base u-text-black u-text-hover-white u-btn-2"
+                    >contact us</a
+                  >
                 </div>
               </div>
             </div>
